--- a/representation_learning.ipynb
+++ b/representation_learning.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6c0584db",
    "metadata": {},
    "outputs": [],
@@ -71,19 +71,9 @@
     " with open('./config.yaml', 'r') as f:\n",
     "    config = yaml.load(f, Loader=yaml.FullLoader)\n",
     "\n",
-    "EMBEDDINGS_PATH = config[\"EMBEDDINGS_PATH\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "b79ca4f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embeddings = pd.read_csv(EMBEDDINGS_PATH)\n",
+    "EMBEDDINGS_PATH = config[\"EMBEDDINGS_PATH\"]\n",
     "\n",
-    "#embeddings"
+    "embeddings = pd.read_csv(EMBEDDINGS_PATH)"
    ]
   },
   {
@@ -125,114 +115,6 @@
     "top_k_rows = embeddings.loc[sorted_df['index'].head(k)]\n",
     "\n",
     "top_k_rows.song_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "b0bac910",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>song_name</th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>...</th>\n",
-       "      <th>246</th>\n",
-       "      <th>247</th>\n",
-       "      <th>248</th>\n",
-       "      <th>249</th>\n",
-       "      <th>250</th>\n",
-       "      <th>251</th>\n",
-       "      <th>252</th>\n",
-       "      <th>253</th>\n",
-       "      <th>254</th>\n",
-       "      <th>255</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>275</th>\n",
-       "      <td>Coldplay - Yellow (Official Video)</td>\n",
-       "      <td>-0.997377</td>\n",
-       "      <td>-0.596357</td>\n",
-       "      <td>-0.200335</td>\n",
-       "      <td>-0.994675</td>\n",
-       "      <td>-0.85077</td>\n",
-       "      <td>-0.932724</td>\n",
-       "      <td>0.681076</td>\n",
-       "      <td>0.31529</td>\n",
-       "      <td>0.449555</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.55648</td>\n",
-       "      <td>0.970623</td>\n",
-       "      <td>0.96758</td>\n",
-       "      <td>-0.816816</td>\n",
-       "      <td>-0.993459</td>\n",
-       "      <td>0.672766</td>\n",
-       "      <td>0.564469</td>\n",
-       "      <td>-0.981141</td>\n",
-       "      <td>0.915764</td>\n",
-       "      <td>0.228338</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 257 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              song_name         0         1         2   \n",
-       "275  Coldplay - Yellow (Official Video) -0.997377 -0.596357 -0.200335  \\\n",
-       "\n",
-       "            3        4         5         6        7         8  ...      246   \n",
-       "275 -0.994675 -0.85077 -0.932724  0.681076  0.31529  0.449555  ... -0.55648  \\\n",
-       "\n",
-       "          247      248       249       250       251       252       253   \n",
-       "275  0.970623  0.96758 -0.816816 -0.993459  0.672766  0.564469 -0.981141  \\\n",
-       "\n",
-       "          254       255  \n",
-       "275  0.915764  0.228338  \n",
-       "\n",
-       "[1 rows x 257 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "new_row = embeddings[embeddings.song_name==\"Coldplay - Yellow (Official Video)\"]\n",
-    "new_row"
    ]
   },
   {
@@ -409,14 +291,6 @@
     "\n",
     "similarity_df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f898f8ee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
