--- a/representation_learning.ipynb
+++ b/representation_learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "05b87297",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "6c0584db",
    "metadata": {},
    "outputs": [],
@@ -26,8 +26,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2853fece",
+   "metadata": {},
+   "source": [
+    "## Representation learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b049c988",
+   "metadata": {},
+   "source": [
+    "Train autoencoder and obtain the embeddings."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "344f8c47",
    "metadata": {},
    "outputs": [
@@ -48,12 +64,12 @@
       "  (decoder3): Linear(in_features=1024, out_features=1425, bias=True)\n",
       "  (activation): Tanh()\n",
       ")\n",
-      "Epoch 100/600, Loss: 0.35278938710689545\n",
-      "Epoch 200/600, Loss: 0.24133955171475044\n",
-      "Epoch 300/600, Loss: 0.2056262378509228\n",
-      "Epoch 400/600, Loss: 0.19267608168033454\n",
-      "Epoch 500/600, Loss: 0.18639300362421915\n",
-      "Epoch 600/600, Loss: 0.1847239933334864\n"
+      "Epoch 100/600, Loss: 0.3514698858444507\n",
+      "Epoch 200/600, Loss: 0.24097653593008334\n",
+      "Epoch 300/600, Loss: 0.20460479190716377\n",
+      "Epoch 400/600, Loss: 0.19185469299554825\n",
+      "Epoch 500/600, Loss: 0.1866001716026893\n",
+      "Epoch 600/600, Loss: 0.18378102492827636\n"
      ]
     }
    ],
@@ -62,8 +78,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65f47870",
+   "metadata": {},
+   "source": [
+    "To find the **5 most similar** video clips to a random one in the training set, you can follow these steps:\n",
+    "\n",
+    "<ol>\n",
+    "<li>Select a random video clip from the training set.</li>\n",
+    "<li>Calculate the similarity between the embeddings of the selected video clip and all the other video clips using a similarity metric such as cosine similarity.</li>\n",
+    "<li>Sort the video clips based on their similarity to the selected video clip in descending order.</li>\n",
+    "<li>Retrieve the 5 most similar video clips from the sorted list.</li>\n",
+    "</ol>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "6394f1a3",
    "metadata": {},
    "outputs": [],
@@ -78,22 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "b8df767c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "84             U2 - Beautiful Day (Official Music Video)\n",
-       "197    blink-182 - All The Small Things (Official Mus...\n",
-       "354                            Imagine Dragons - Thunder\n",
-       "443    George Strait - Check Yes Or No (Official Musi...\n",
-       "256    Maroon 5 - She Will Be Loved (Official Music V...\n",
+       "84                      Leftöver Crack - Rock The 40 oz.\n",
+       "62     Bloodhound Gang - Fire Water Burn (Official Vi...\n",
+       "308                              The Wild! - Livin' Free\n",
+       "722    Black Stone Cherry - Cheaper To Drink Alone (O...\n",
+       "357                    The Struts - Put Your Money On Me\n",
        "Name: song_name, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,181 +146,6 @@
     "top_k_rows = embeddings.loc[sorted_df['index'].head(k)]\n",
     "\n",
     "top_k_rows.song_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "a87daa93",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                             song_name          0          1   \n",
-      "7                   Coldplay - Yellow (Official Video)  -9.482277 -17.017149  \\\n",
-      "355  Dustin Lynch - Small Town Boy (Official Music ...  -3.257727 -21.195219   \n",
-      "272  The Head and the Heart - Another Story [LYRIC ...  -9.087346 -18.739649   \n",
-      "152                Windser - 'Memory' (Official Video) -11.384016 -15.352129   \n",
-      "499  In The End [Official HD Music Video] - Linkin ...  -0.142204 -12.916926   \n",
-      "\n",
-      "             2          3          4          5          6          7   \n",
-      "7   -22.648094 -24.028070 -28.497684 -15.236567 -27.830055 -22.076004  \\\n",
-      "355 -31.804800 -39.055073 -31.687256 -22.008572 -32.163673  -9.928259   \n",
-      "272 -15.318180 -35.417496 -25.992620 -15.554015 -32.123146 -12.749828   \n",
-      "152 -18.705595 -34.387920 -26.596876 -24.229233 -32.270203 -19.843042   \n",
-      "499 -19.849882 -27.082024 -17.945333 -12.182645 -23.425377 -11.966296   \n",
-      "\n",
-      "             8  ...        246        247        248        249        250   \n",
-      "7   -34.536442  ... -12.716101 -33.311287 -26.855339 -14.852716 -10.970520  \\\n",
-      "355 -39.017513  ... -21.144735 -36.801308 -26.417698  -5.399412  -6.806280   \n",
-      "272 -38.771873  ... -15.452153 -33.293392  -5.915218 -12.779036   0.059100   \n",
-      "152 -39.774059  ... -15.644076 -32.967243  -0.713319 -11.792511  -2.093389   \n",
-      "499 -37.188404  ... -10.601071 -28.905264  -6.844146  -1.174205  -3.502926   \n",
-      "\n",
-      "          251        252        253        254        255  \n",
-      "7   -4.921639 -22.924620 -14.394688 -17.897991 -29.615364  \n",
-      "355 -8.584983 -32.085678 -19.788677 -18.450663 -27.108330  \n",
-      "272 -2.408171  -9.284594 -18.034630 -18.950037  -8.256599  \n",
-      "152  1.595711  -7.464220 -18.288908 -16.573826 -14.562028  \n",
-      "499  1.453113  -8.497476 -11.777222 -15.891867 -16.057480  \n",
-      "\n",
-      "[5 rows x 257 columns]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>similarity</th>\n",
-       "      <th>index</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.610562</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.668604</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.777926</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.530004</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.561133</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>764</th>\n",
-       "      <td>0.722502</td>\n",
-       "      <td>764</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765</th>\n",
-       "      <td>0.538063</td>\n",
-       "      <td>765</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>766</th>\n",
-       "      <td>0.701004</td>\n",
-       "      <td>766</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>767</th>\n",
-       "      <td>0.620287</td>\n",
-       "      <td>767</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>768</th>\n",
-       "      <td>0.742801</td>\n",
-       "      <td>768</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>769 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     similarity  index\n",
-       "0      0.610562      0\n",
-       "1      0.668604      1\n",
-       "2      0.777926      2\n",
-       "3      0.530004      3\n",
-       "4      0.561133      4\n",
-       "..          ...    ...\n",
-       "764    0.722502    764\n",
-       "765    0.538063    765\n",
-       "766    0.701004    766\n",
-       "767    0.620287    767\n",
-       "768    0.742801    768\n",
-       "\n",
-       "[769 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "\n",
-    "# new_row = pd.Series([0.5, 0.2, 0.8, ...])  # Replace with your new row data\n",
-    "new_row = embeddings.iloc[7, 1:]\n",
-    "\n",
-    "# Calculate cosine similarity\n",
-    "cos_sim = cosine_similarity(embeddings.iloc[:, 1:].values, new_row.values.reshape(1, -1))\n",
-    "\n",
-    "# Create a dataframe with cosine similarity values and row indices\n",
-    "similarity_df = pd.DataFrame({'similarity': cos_sim.flatten(), 'index': embeddings.index})\n",
-    "\n",
-    "# Sort dataframe by similarity in descending order\n",
-    "sorted_df = similarity_df.sort_values(by='similarity', ascending=False)\n",
-    "\n",
-    "# Get the top k rows\n",
-    "k = 5  # Replace with your desired value of k\n",
-    "top_k_rows = embeddings.loc[sorted_df['index'].head(k)]\n",
-    "\n",
-    "# Print the top k rows\n",
-    "print(top_k_rows)\n",
-    "\n",
-    "similarity_df"
    ]
   }
  ],
